--- a/src/app/news/news-article/news-article.component.scss
+++ b/src/app/news/news-article/news-article.component.scss
@@ -45,4 +45,34 @@
     font-size: $font-size-ingress;
     line-height: $line-height-menu;
   }
+
+  .meta {
+    margin-top: 2rem;
+    padding-top: 1rem;
+    border-top: 1px solid $color-accent;
+
+    .tags {
+      padding: 1rem 0;
+    }
+
+    .tag {
+      text-transform: uppercase;
+      font-family: $font-title;
+      background: $color-accent-dark;
+      color: $color-text;
+      border-radius: $border-radius;
+      display: inline-block;
+      padding: 5px;
+      transform: skew(-15deg);
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+  .category {
+      background: $color-accent;
+    }
+  }
 }
